--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-aiogram==3.11.2
+python-telegram-bot==20.7
+opencv-python==4.8.1.78
 moviepy==1.0.3
-pillow==10.0.1
+numpy==1.24.3
+imageio==2.31.1
+imageio-ffmpeg==0.4.9
+Pillow==10.0.1
